Add quizes, add home page for guest/user, add tracking of set accessing, UI improvements, mobile views improved

--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row mx-0">
 	<div class="col-12 col-sm-8 offset-sm-2 col-md-8 offset-md-0 col-lg-6">
 		<form>
 			@*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
