--- a/Views/Cards/Subject.cshtml
+++ b/Views/Cards/Subject.cshtml
@@ -26,7 +26,7 @@
 </div>
 <div class="row mx-3">
 	<div class="col-12">
-		<div class="cat-sub-title rounded text-dark py-4 px-5">
+		<div class="cat-sub-title rounded py-4 px-5 tag-category-@(Model.CardSubject.CardCategory.Name.Replace(" ", ""))">
 			<p class="lead">@(Model.CardSubject.CardCategory.Name) sets</p>
 			<p class="display-6"><strong>@Model.CardSubject.Name</strong></p>
 		</div>
