--- a/Views/Shared/_SetsFilters.cshtml
+++ b/Views/Shared/_SetsFilters.cshtml
@@ -42,7 +42,7 @@
 					<div
 						class="col-12 col-xxl-2 text-center mt-3 mt-xxl-0 d-flex justify-content-center justify-content-xxl-end pe-0">
 						<button id="clearFiltersButton" class="btn btn-danger">Clear</button>
-						<button id="filterButton" type="submit" class="btn btn-primary ms-2"
+						<button id="filterButton" type="submit" class="btn btn-info ms-2"
 							asp-action="@((string)ViewContext.RouteData.Values["action"])">Apply</button>
 					</div>
 				</div>
