--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row">
+<div class="row mx-0">
     <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-4 offset-md-4">
         <section>
             <form id="account" method="post">
