--- a/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -6,7 +6,7 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row mx-0">
     <div class="col-12 col-sm-8 offset-sm-2 col-md-8 offset-md-0 col-lg-6">
         <h3 class="text-light">@ViewData["Title"]</h3>
         <form id="email-form" method="post">
