--- a/Views/Shared/_CardSetList.cshtml
+++ b/Views/Shared/_CardSetList.cshtml
@@ -2,7 +2,7 @@
 @using System.Security.Claims
 
 <div class="col-12">
-	<p class="my-3 text-light"><strong>Flashcard sets</strong></p>
+	<p class="my-3 text-light"><strong>@Model.ListName</strong></p>
 </div>
 <div class="col-xs-6">
 	<div class="row">
@@ -17,7 +17,7 @@
 									Model.ActionName == "Sets" ||
 									!cardSet.IsPublic)
 							{
-								<div class="tags mb-1">
+								<div class="tags mb-1 mb-3">
 									@if (Model.ActionName != "Subject")
 									{
 										<div class="tag-category-@(cardSet.CardSubject.CardCategory != null ?
@@ -42,13 +42,13 @@
 									}
 								</div>
 							}
-							<h5 class="card-title text-light">@cardSet.Name</h5>
+							<p class="card-title text-light h5">@cardSet.Name</p>
 						</div>
 						<div class="row">
 							<div class="col-12 d-flex justify-content-between align-items-center">
 								<p class="m-0 text-light">
-									<a class="text-info user-link" asp-route-author="@cardSet.User.Nickname">
-										<i class="bi bi-person-circle"></i>
+									<a class="text-info list-user-link user-link" asp-route-author="@cardSet.User.Nickname">
+										<i class="bi bi-person-circle me-1"></i>
 										@if (User.Identity.IsAuthenticated && User.FindFirstValue(ClaimTypes.NameIdentifier) ==
 												@cardSet.UserId)
 										{
