--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,8 @@
 			</a>
 			<ul class="dropdown-menu">
 				<li class="dropdown-item d-flex nav-text p-0 ms-3 ms-md-0">
-					<a class="nav-link flex-grow-1 text-start text-md-center py-1" asp-area="Identity"
+					<a class="nav-link flex-grow-1 text-start account-button text-md-center py-1"
+					asp-area="Identity" 
 					asp-page="/Account/Manage/Index" title="Manage">
 						Settings
 					</a>
@@ -22,7 +23,7 @@
 					<form class="form-inline d-flex" asp-area="Identity" asp-page="/Account/Logout"
 					asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
 						<button type="submit"
-						class="nav-link btn btn-link flex-grow-1 text-start text-md-center py-1">Logout</button>
+						class="nav-link btn btn-link flex-grow-1 text-start text-md-center account-button py-1">Logout</button>
 					</form>
 				</li>
 			</ul>
